# ufm-python-for-finance

./: .gitignore  01 Introducción.ipynb  02 FRED.ipynb  03 Funciones.ipynb  04 Pandas.ipynb  05 Numpy.ipynb  06 Estocástica.ipynb  07 OECD.ipynb  08 Eurostat.ipynb  09 Regresión lineal.ipynb  10 Idealista.ipynb  11 Clasificación.ipynb  12 Series temporales.ipynb  13 Clasificación dígitos.ipynb  14 Langchain.ipynb  Comtrade.ipynb  README.md  Yahoo Finance.ipynb  chat.py  pyproject.toml  syllabus.md
data/: balance.txt  gdp-fmt.csv  gdp-paises.csv
exams/: Examen final.md  Examen reposición.md
utils/: oecd.py
