[project]
name = "ufm-python-for-finance"
version = "0.1.0"
description = "Contenidos vistos en el curso de Python for Finance de la Universidad Franciso Marroquín (UFM) en la edición de septiembre de 2025"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "comtradeapicall>=1.2.1",
    "darts>=0.38.0",
    "fastparquet>=2024.11.0",
    "fredapi>=0.5.2",
    "httpx>=0.28.1",
    "ipykernel>=6.30.1",
    "langchain>=1.0.3",
    "langchain-anthropic>=1.0.1",
    "langchain-openai>=1.0.1",
    "matplotlib>=3.10.6",
    "nbformat>=5.10.4",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "statsmodels>=0.14.5",
    "streamlit>=1.51.0",
    "tensorflow>=2.20.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.66",
]
